# marker2nii

./: README.md  pyproject.toml
marker2nii/: marker2nii.py
